--- a/index.html
+++ b/index.html
@@ -1,9 +1,149 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Aplikasi 4</title>
+	<!--sambungan untuk ke CSS-->
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
+	<!--Ini bagian awal-->
+	<div id="wow">
+		<div class="menubar">
+			<ul>
+				<li><a href="#about">About</a></li>
+				<li><a href="#divisi">Divisi</a></li>
+				<li><a href="#karya">Karya</a></li>
+				<li><a href="#event">Event</a></li>
+				<li><a href="#member">Member</a></li>
+			</ul>
+		</div>
+		<div class="logo"></div>
+		<h1>Ekstrakurikuler dibidang <br>Teknologi Komunikasi dan Informasi</h1>
+	</div>
+	<!--Ini bagian kontent about-->
+	<div id="about">
+		<h2>About</h2>
+		<div class="aboutapk">
+	</div>
+	<!--Ini bagian Kontent Divisi-->
+	<div id="divisi">
+		<h2>Divisi</h2>
+			<div class="divisiapk">
+				<a href="programming.html">
+					<div class="gambardivisi">
+						<img src="" alt="Programming">
+						<p>Programming</p>
+					</div>
+				</a>
+			</div>
+			<div class="divisiapk">
+				<a href="desain.html">
+					<div class="gambardivisi">
+						<img src="" alt="Desain Grafis">
+						<p>Desain Grafis</p>
+					</div>
+				</a>
+			</div>
+			<div class="divisiapk">
+				<a href="jaringan.html">
+					<div class="gambardivisi">
+						<img src="" alt="Jaringan">
+						<p>jaringan</p>
+					</div>
+				</a>
+			</div>
+			<div class="divisiapk">
+				<a href="pdv.html">
+					<div class="gambardivisi">
+						<img src="" alt="Pdv">
+						<p>Photografi dan<br>Videografi</p>
+					</div>
+				</a>
+			</div>
+			<div class="divisiapk">
+				<a href="robotic.html">
+					<div class="gambardivisi">
+						<img src="" alt="Robotic">
+						<p>robotic</p>
+					</div>
+				</a>
+			</div>
+	</div>
+	<!--Ini bagian kontent Karya-->
+	<div id="karya">
+		<h2>Karya</h2>
+			<div class="karya1">
+				<a href="karya1.html">
+					<div class="gambarkarya">
+						<img src="" alt="karya 1">
+						<p>Judul Karya</p>
+					</div>
+				</a>
+			</div>
+			<div class="karya1">
+				<a href="karya2.html">
+					<div class="gambarkarya">
+						<img src="" alt="karya 2">
+						<p>Judul Karya</p>
+					</div>
+				</a>
+			</div>
+			<div class="karya1">
+				<a href="karya3.html">
+					<div class="gambarkarya">
+						<img src="" alt="karya 3">
+						<p>Judul Karya</p>
+					</div>
+				</a>
+			</div>
+			<div class="karya1">
+				<a href="karya4.html">
+					<div class="gambarkarya">
+						<img src="" alt="karya 4">
+						<p>Judul Karya</p>
+					</div>
+				</a>
+			</div>
+	</div>
+	<!--ini Bagian Kontent Event-->
+	<div id="event">
+		<div class="eventapk">
+			<h2>Event</h2>
+			<img src="" alt="HOLOGRAM">
+			<div class="descevent"></div>
+		</div>
+	</div>
+	<!--Ini bagian kontent member-->
+	<div id="member">
+		<h2>Member</h2>
+			
+			<div class="memberapk">
+				<a href="v07.html">
+					<div class="gambarmember">
+						<img src="" alt="v.07">
+					</div>
+				</a>
+			</div>
+			
+			<div class="memberapk">
+				<a href="v07.html">
+					<div class="gambarmember">
+						<img src="" alt="v.08">
+					</div>
+				</a>
+			</div>
+			
+			<div class="memberapk">
+				<a href="v07.html">
+					<div class="gambarmember">
+						<img src="" alt="v.09">
+					</div>
+				</a>
+			</div>
+	</div>
+	<!--ini bagian kontent footer-->
+	<div id="footer">
+		<p>hakcipta</p>
+	</div>
 </body>
 </html>
